<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Unidade de velocidade -->
        <TextView
            android:id="@+id/tvSpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/rgSpeedUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvSpeedUnit"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbKMH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_h"/>

            <RadioButton
                android:id="@+id/rbMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m_s"/>
        </RadioGroup>

        <!-- Formato das coordenadas geográficas -->
        <TextView
            android:id="@+id/tvCoordinateFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinate_format"
            app:layout_constraintTop_toBottomOf="@id/rgSpeedUnit"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/rgCoordinateFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvCoordinateFormat"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbDegrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees"/>

            <RadioButton
                android:id="@+id/rbDegreesMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_minutes"/>

            <RadioButton
                android:id="@+id/rbDegreesMinutesSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_minutes_seconds" />
        </RadioGroup>

        <!-- Orientação do Mapa -->
        <TextView
            android:id="@+id/tvMapOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_orientation"
            app:layout_constraintTop_toBottomOf="@id/rgCoordinateFormat"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/rgMapOrientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvMapOrientation"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation_none"/>

            <RadioButton
                android:id="@+id/rbNorthUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation_north_up"/>

            <RadioButton
                android:id="@+id/rbCourseUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation_course_up"/>
        </RadioGroup>

        <!-- Tipo do Mapa -->
        <TextView
            android:id="@+id/tvMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            app:layout_constraintTop_toBottomOf="@id/rgMapOrientation"
            app:layout_constraintStart_toStartOf="parent"/>

        <RadioGroup
            android:id="@+id/rgMapType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvMapType"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rbVector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vector"/>

            <RadioButton
                android:id="@+id/rbSatellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite"/>
            <Button
                android:id="@+id/btnBackFromSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.539"
                app:layout_constraintStart_toStartOf="parent" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
