<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegisterTrail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_trail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="32dp"
        style="@style/MainActivityButton"/>

    <Button
        android:id="@+id/btnManageTrail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_trail"
        app:layout_constraintTop_toBottomOf="@id/btnRegisterTrail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        style="@style/MainActivityButton"/>

    <Button
        android:id="@+id/btnShareTrail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_trail"
        app:layout_constraintTop_toBottomOf="@id/btnManageTrail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        style="@style/MainActivityButton"/>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@id/btnShareTrail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        style="@style/MainActivityButton"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        style="@style/MainActivityButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
